--- a/index.css
+++ b/index.css
@@ -131,6 +131,10 @@ h3 {
     color: #398fe5;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .header-shadow {
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.11);
 }
